[gd_scene load_steps=11 format=2]

[ext_resource path="res://asset/tiles_tiny_sample_2.png" type="Texture" id=1]
[ext_resource path="res://item/buji.gd" type="Script" id=2]
[ext_resource path="res://asset/item/roguelikeitems.png" type="Texture" id=3]
[ext_resource path="res://asset/enemy/enemy_0.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec3 color1 = vec3(0.1, 0.6, 0.8);

void fragment(){
	vec3 text_color = texture(TEXTURE, UV).rgb;
	vec3 final_color = mix(color1, text_color, 0.65);
	COLOR.rgb = final_color;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/color1 = Vector3( 0.1, 0.6, 0.8 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform vec3 color1 = vec3(0.5, 0.05, 0.5);
uniform vec3 color2 = vec3(0.85, 0.25, 0.90);

void fragment(){
	vec3 text_color = texture(TEXTURE, UV).rgb;
	vec3 final_color = vec3(0.0);
	float pct = abs(sin(TIME));
	final_color = mix(color1, color2, pct);
	final_color = mix(final_color, text_color, 0.6);
	COLOR.rgb = final_color;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/color1 = Vector3( 0.5, 0.05, 0.5 )
shader_param/color2 = Vector3( 0.85, 0.25, 0.9 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform vec3 color1 = vec3(0.5, 0.25, 0.05);
uniform vec3 color2 = vec3(0.95, 0.55, 0.1);

void fragment(){
	vec3 text_color = texture(TEXTURE, UV).rgb;
	vec3 final_color = vec3(0.0);
	float pct = abs(sin(TIME));
	final_color = mix(color1, color2, pct);
	final_color = mix(final_color, text_color, 0.6);
	COLOR.rgb = final_color;
}
"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/color1 = Vector3( 0.5, 0.25, 0.05 )
shader_param/color2 = Vector3( 0.95, 0.55, 0.1 )

[node name="buji" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 128, 224, 32, 32 )

[node name="SpriteHeroBP" type="Node2D" parent="."]

[node name="CommonHeroBP" type="Sprite" parent="SpriteHeroBP"]
visible = false
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 128, 224, 32, 32 )

[node name="RareHeroBP" type="Sprite" parent="SpriteHeroBP"]
visible = false
material = SubResource( 2 )
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 128, 224, 32, 32 )

[node name="EpicHeroBP" type="Sprite" parent="SpriteHeroBP"]
visible = false
material = SubResource( 4 )
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 128, 224, 32, 32 )

[node name="LegendaryHeroBP" type="Sprite" parent="SpriteHeroBP"]
visible = false
material = SubResource( 6 )
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 128, 224, 32, 32 )

[node name="SpriteHP" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 224, 32, 32 )

[node name="SpriteMP" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 224, 32, 32 )

[node name="SpriteGold" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 112, 48, 16, 16 )

[node name="SpriteGold2" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 128, 48, 16, 16 )

[node name="Rune" type="Node2D" parent="."]

[node name="Green" type="Sprite" parent="Rune"]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 48, 16, 16 )

[node name="Blue" type="Sprite" parent="Rune"]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 16, 48, 16, 16 )

[node name="Purple" type="Sprite" parent="Rune"]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 48, 16, 16 )

[node name="Red" type="Sprite" parent="Rune"]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 48, 48, 16, 16 )

[node name="Tween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
margin_right = 16.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}
